# nicfit.py

./: .cookiecutter.json  .cookiecutter.yml  .gitignore  .nicfit.yml  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  parcyl.py  project.json  requirements.txt  setup.cfg  setup.py  tox.ini
cookiecutter/: Makefile  README.rst  cookiecutter.json  mkpregen.py  test.sh
cookiecutter/hooks/: post_gen_project.py  pre_gen_project.py  pre_gen_project.py.in
cookiecutter/{{cookiecutter.project_name}}/: .gitignore  .hgignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  git-commit-msg  pavement.py  setup.cfg  setup.py  tox.ini
cookiecutter/{{cookiecutter.project_name}}/docs/: conf.py  index.rst  installation.rst
cookiecutter/{{cookiecutter.project_name}}/licenses/: BSD-3  GPL-2  LGPL-2  LGPL-3  MIT
cookiecutter/{{cookiecutter.project_name}}/locale/: {{cookiecutter.gettext_domain}}.pot
cookiecutter/{{cookiecutter.project_name}}/locale/en_US/LC_MESSAGES/: {{cookiecutter.gettext_domain}}.po
cookiecutter/{{cookiecutter.project_name}}/requirements/: dev.txt  develop.txt  release.txt  requirements.yml  test.txt
cookiecutter/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.py_module}}.py
cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}/: __about__.py  __init__.py  __main__.py  _compat.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  nicfit.console.rst  nicfit.rst  nicfit.shell.rst  usage.rst
examples/: asyncio_example.py  commands.py  curio_example.py  example.py  sub_commands.py
locale/: nicfit.py.pot
locale/en_US/LC_MESSAGES/: nicfit.py.po
locale/es/LC_MESSAGES/: nicfit.py.po
nicfit/: __about__.py  __init__.py  __main__.py  _argparse.py  _asyncio.py  _config.py  _logging.py  aio.py  app.py  command.py  compat.py  config.py  curio.py  deprecation.py  logger.py  prompt.py  util.py
nicfit/console/: __init__.py  _io.py  ansi.py
nicfit/shell/: __init__.py  aio.py  command.py  completion.py  output.py  shell.py
requirements/: dev.txt  extra_cookiecutter.txt  extra_curio.txt  extra_shell.txt  install.txt  main.txt  requirements.yml  test.txt
tests/: conftest.py  test_aio.py  test_application.py  test_argsparse.py  test_command.py  test_config.py  test_console.py  test_curio.py  test_logging.py  test_main.py  test_nicfit.py  test_shell.py  test_util.py
