[tool:parcyl]
install = attrs
          deprecation

extra_cookiecutter = cookiecutter

extra_curio = curio

extra_shell = prompt-toolkit ~= 1.0

test = tox
       detox

dev = Sphinx
      sphinx_rtd_theme
      ipdb
      pip-tools
      # FIXME: remove once implemented in tox
      twine
      wheel
      pss

[wheel]
universal = 0

[flake8]
max-line-length = 80
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E266,W504
builtins = _

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*


[tool:pytest]
addopts = --verbose --ignore ./cookiecutter --ignore ./tmp

[metadata]
license_file = LICENSE
