[parcyl]
version = 0.8.4
release_name =
years = 2016-2019

project_name = nicfit.py
author = Travis Shirk
author_email = travis@pobox.com
url = https://github.com/nicfit/nicfit.py
description = Common Python utils (App, logging, config, etc.)
long_description =
license = MIT
github_url = https://github.com/nicfit/nicfit.py
classifiers =
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =

[parcyl:requirements]
install = deprecation
          pathlib ; python_version < '3.4'
          dataclasses ; python_version < '3.7'

test = pytest
       tox
       mock; python_version < '3.4'

extra_curio = curio
extra_cookiecutter = cookiecutter
extra_shell = prompt-toolkit ~= 1.0

dev = detox
      Sphinx
      sphinx_rtd_theme
      pdbpp
      twine
      wheel

[wheel]
universal = 0

[flake8]
max-line-length = 80
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E266,W504
builtins = _

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*


[tool:pytest]
addopts = --verbose --ignore ./cookiecutter --ignore ./tmp

[metadata]
license_file = LICENSE
