[wheel]
universal = 1

[flake8]
max-line-length = 80
statistics = 1
ignore = E121,E124,E126,E127,E128

[aliases]
{% if cookiecutter.use_pytest == "yes" -%}
test = pytest
{%- endif %}

{% if cookiecutter.use_pytest == "yes" -%}
# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

[tool:pytest]
addopts = --verbose
{%- endif %}

[metadata]
license_file = LICENSE
