[tool:parcyl]
test = tox
install =
extra_foo =
dev =

[wheel]
universal = 0

[flake8]
max-line-length = 100
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E266,W504
builtins = _

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*


[tool:pytest]
addopts = --verbose

[metadata]
license_file = LICENSE
